app/src/main/java/com/example/myapplication/ui/theme/Color.kt
package com.example.myapplication.ui.theme

import androidx.compose.ui.graphics.Color

// ── Cadence Fantasy Tavern Palette ────────────────────────────────────────────

val TavernBrown      = Color(0xFF1C0F00)   // deepest background
val WarmWood         = Color(0xFF2D1B0E)   // card / surface
val AgedWood         = Color(0xFF3D2510)   // surface variant
val OakBorder        = Color(0xFF4D3219)   // borders, dividers

val AncientGold      = Color(0xFFD4A017)   // primary — warm gold
val GoldContainer    = Color(0xFF4A3300)   // primary container
val CandleLight      = Color(0xFFFFF0C0)   // on primary container / highlights

val WarmParchment    = Color(0xFFEDD9A3)   // main text
val FadedInk         = Color(0xFF9E8866)   // secondary / hint text

val EmberOrange      = Color(0xFFC45000)   // secondary accent
val EmberContainer   = Color(0xFF3D1A00)   // secondary container
val EmberLight       = Color(0xFFFFB77C)   // on secondary container

val CrimsonError     = Color(0xFF8B1A1A)   // error
